<resources>
    <string name="app_name">微修</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">手机号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">注册</string>
    <string name="action_sign_up">登陆</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="confirm_register">确认注册</string>
    <string name="provision">使用协议</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="title_activity_main">校园微修</string>

    <string name="navigation_drawer_open">打开侧边栏</string>
    <string name="navigation_drawer_close">关闭侧边栏</string>

    <string name="action_settings">系统设置</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_new_fix">提交新问题</string>
    <string name="large_text">
    </string>
    <string name="fix_title">故障问题</string>
    <string name="fix_details">故障描述</string>
    <string name="address">详细地址（具体至门牌号）</string>
    <string name="name">名字</string>
    <string name="submit">提交信息</string>
    <string name="other_contact">其他联系方式</string>
    <string name="title_activity_phone_book">PhoneBookActivity</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="validate_code">验证码</string>
    <string name="get_validate_code">获取验证码</string>
</resources>
