<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundYellow"
    android:padding="0dp"
    tools:context="com.example.plex.vfix.activities.RegisterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/yellowTheme"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:navigationIcon="@mipmap/icon_back_o"
        app:title="@string/action_sign_in"
        app:titleMarginStart="10dp"
        app:titleTextColor="#222222"
        tools:layout_editor_absoluteY="0dp">

    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/register_toolbar"
        android:layout_alignRight="@+id/register_toolbar"
        android:layout_below="@+id/register_toolbar"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_toolbar"
        app:layout_constraintVertical_bias="0.038">

        <EditText
            android:id="@+id/register_edit_name"
            android:layout_width="368dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_reset"
            android:hint="@string/name"
            android:paddingLeft="20dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.141"
            tools:ignore="RtlSymmetry"
            tools:layout_editor_absoluteX="8dp" />


        <View
            android:layout_width="342dp"
            android:layout_height="0.3dp"
            android:layout_gravity="end"
            android:background="#888888"
            tools:layout_gravity="right" />

        <EditText
            android:id="@+id/register_edit_phone"
            android:layout_width="368dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_reset"
            android:hint="@string/prompt_email"
            android:inputType="number"
            android:paddingLeft="20dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.141"
            tools:ignore="RtlSymmetry"
            tools:layout_editor_absoluteX="8dp" />

        <View
            android:layout_width="342dp"
            android:layout_height="0.3dp"
            android:layout_gravity="end"
            android:background="#888888"
            tools:layout_gravity="right" />

        <LinearLayout
            android:layout_width="368dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/register_edit_validate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/edittext_reset"
                android:hint="@string/validate_code"
                android:paddingLeft="20dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.141"
                tools:ignore="RtlSymmetry"
                tools:layout_editor_absoluteX="8dp" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="@null"
                android:onClick="getValidateCode"
                android:paddingLeft="20dp"
                android:text="@string/get_validate_code"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_light"
                android:textSize="16sp" />


        </LinearLayout>


        <View
            android:layout_width="342dp"
            android:layout_height="0.3dp"
            android:layout_gravity="end"
            android:background="#888888"
            tools:layout_gravity="right" />


        <EditText
            android:id="@+id/register_edit_password"
            android:layout_width="368dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_reset"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.141"
            tools:layout_editor_absoluteX="8dp" />

        <View
            android:layout_width="342dp"
            android:layout_height="0.3dp"
            android:layout_gravity="end"
            android:background="#888888"
            tools:layout_gravity="right" />


        <EditText
            android:id="@+id/register_edit_password_confirm"
            android:layout_width="368dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_reset"
            android:hint="确认密码"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.141"
            tools:layout_editor_absoluteX="8dp" />


    </LinearLayout>

    <Button
        android:id="@+id/button4"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_rect_normal_large_can_press"
        android:onClick="register"
        android:text="@string/confirm_register" />

    <ProgressBar
        android:id="@+id/register_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:visibility="invisible" />


</RelativeLayout>
