<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundYellow"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.plex.vfix.activities.NewFixActivity"
    tools:showIn="@layout/activity_new_fix">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/register_toolbar"
        android:layout_alignRight="@+id/register_toolbar"
        android:layout_below="@+id/register_toolbar"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_toolbar"
        app:layout_constraintVertical_bias="0.038">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical">

            <EditText
                android:id="@+id/new_fix_problem"
                android:layout_width="368dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext_reset"
                android:hint="@string/fix_title"
                android:paddingLeft="20dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.141"
                tools:ignore="RtlSymmetry"
                tools:layout_editor_absoluteX="8dp" />


            <View
                android:layout_width="342dp"
                android:layout_height="0.3dp"
                android:layout_gravity="end"
                android:background="#888888"
                tools:layout_gravity="right" />


            <!--<EditText-->
            <!--android:id="@+id/fix_edit_password"-->
            <!--android:layout_width="368dp"-->
            <!--android:layout_height="42dp"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_marginBottom="8dp"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:inputType="textPassword"-->
            <!--android:background="@drawable/edittext_reset"-->
            <!--android:hint="@string/prompt_password"-->
            <!--android:paddingLeft="20dp"-->
            <!--android:textSize="16sp"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"-->
            <!--app:layout_constraintTop_toTopOf="parent"-->
            <!--app:layout_constraintVertical_bias="0.141"-->
            <!--tools:layout_editor_absoluteX="8dp" />-->


            <LinearLayout
                android:layout_width="368dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.141">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="楼层类型"
                    android:textColor="#818181"
                    android:textSize="16sp" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/new_fix_building_type"
                    style="@style/AppTheme.SpinnerTheme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_reset"
                    android:entries="@array/type"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="342dp"
                android:layout_height="0.3dp"
                android:layout_gravity="end"
                android:background="#888888"
                tools:layout_gravity="right" />

            <LinearLayout
                android:layout_width="368dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.141">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="楼号"
                    android:textColor="#818181"
                    android:textSize="16sp" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/new_fix_building_number"
                    style="@style/AppTheme.SpinnerTheme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_reset"
                    android:entries="@array/number"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="342dp"
                android:layout_height="0.3dp"
                android:layout_gravity="end"
                android:background="#888888"
                tools:layout_gravity="right" />

            <EditText
                android:id="@+id/new_fix_addr"
                android:layout_width="368dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext_reset"
                android:hint="@string/address"
                android:paddingLeft="20dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.141"
                tools:ignore="RtlSymmetry"
                tools:layout_editor_absoluteX="8dp" />

            <View
                android:layout_width="342dp"
                android:layout_height="0.3dp"
                android:layout_gravity="end"
                android:background="#888888"
                tools:layout_gravity="right" />


            <EditText
                android:id="@+id/new_fix_other_contact"
                android:layout_width="368dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext_reset"
                android:hint="@string/other_contact"
                android:inputType="phone"
                android:paddingLeft="20dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.141"
                tools:ignore="RtlSymmetry"
                tools:layout_editor_absoluteX="8dp" />

            <View
                android:layout_width="342dp"
                android:layout_height="0.3dp"
                android:layout_gravity="end"
                android:background="#888888"
                tools:layout_gravity="right" />


            <EditText
                android:id="@+id/new_fix_edit_details"
                android:layout_width="348dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_multiline_default"
                android:hint="@string/fix_details"
                android:inputType="textMultiLine"
                android:minHeight="42dp"
                android:minLines="3"
                android:paddingLeft="15dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.141" />

        </LinearLayout>


        <Button
            android:id="@+id/button4"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout"
            android:layout_marginTop="15dp"
            android:layout_weight="0.33"
            android:background="@drawable/button_rect_normal_large_can_press"
            android:onClick="submit"
            android:text="@string/submit" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
