<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.plex.vfix.activities.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084"
        app:srcCompat="@mipmap/ic_logo"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />


    <ProgressBar
        android:id="@+id/firstBar"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:max="200"
        android:maxHeight="48dp"
        android:minHeight="48dp"
        android:progress="0"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" /> 

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginRight="43dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/layerlist_edit_theme_a"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.107"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1">


        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center_vertical"
            android:padding="5dp"
            android:src="@mipmap/account" />

        <EditText
            android:id="@+id/login_edit_tel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edittext_reset"
            android:hint="手机号"
            android:inputType="phone"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:textSize="14sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginRight="43dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/edittext_default"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.283"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1">


        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center_vertical"
            android:padding="5dp"
            android:src="@mipmap/pwd" />

        <EditText
            android:id="@+id/login_edit_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edittext_reset"
            android:hint="密码"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:textSize="14sp" />


    </LinearLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:clickable="true"
        android:onClick="forgetPassword"
        android:text="@string/forget_pwd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_primary_large_can_press"
        android:onClick="login"
        android:text="@string/action_sign_up"
        android:textColor="@android:color/white"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/button3"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_normal_large_can_press"
        android:onClick="register"
        android:text="@string/action_sign_in"
        android:textColor="@color/buttonTextYellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.054"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="83dp"
        android:layout_height="23dp"
        android:layout_marginTop="141dp"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_logo_moji"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:onClick="provision"
        android:text="@string/provision"
        android:textAlignment="center"
        android:textColor="@color/buttonTextYellow"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <ImageView
        android:id="@+id/login_setting"
        android:layout_width="48dp"
        android:layout_height="44dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:onClick="setting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/setting_network" />


</android.support.constraint.ConstraintLayout>
